--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ h1 {
     margin-bottom: 30px;
 }
 
-
 .container {
     display: flex;
     align-items: center;
@@ -57,11 +56,6 @@ h1 {
 }
 
 .box:hover {
-    border-color: #2ecc71;
-    background-color: #eafaf1;
-}
-
-.drag-over {
     border-color: #2ecc71;
     background-color: #eafaf1;
 }
@@ -132,9 +126,7 @@ h1 {
 
 .reorderable-list {
     position: relative;
-    top: 30px; 
-    right: 100px; 
-    left: 00px;
+    top: 30px;
     width: 200px;
     text-align: center;
 }
@@ -142,7 +134,7 @@ h1 {
 .reorderable-list h2 {
     color: #333;
     font-size: 1.5rem;
-    margin-bottom: 10px;
+    margin-bottom: 3px;
 }
 
 #reorderable-list {
@@ -168,32 +160,16 @@ h1 {
     transform: scale(1.05);
 }
 
-/* Style for drop preview text in the box */
-.drop-preview {
-    padding: 10px;
-    font-size: 14px;
-    color: #777;
-    border: 1px dashed #777;
-    background-color: #f3f3f3;
-    opacity: 0.8;
-    text-align: center;
-    margin-top: 10px;
-}
-
-/* Style for drop indicator to highlight the box */
-.drop-indicator {
-    height: 10px;
-    background-color: #007bff;
-    margin: 5px 0;
-}
-
 #previewButton {
-    visibility: hidden; /* Initially hidden */
     background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    padding: 8px;
-    margin: 10px;
+    border: 1px solid black;
+    padding: 10px 20px;
+    margin: 40px;
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: 8px;
 }
 
-
-
+#previewButton:hover {
+    background-color: gray;
+}
